--- a/shredder.html
+++ b/shredder.html
@@ -26,6 +26,7 @@ repeats = random(0,220);
 	spacing2 = random(0,50);
 	repeats2 = random(0,220);
 
+image(img);
 for(i=0;i<repeats;i=i+spacing){
 	image(keyed, i-25, 0);
 	}
